--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
 		"**/.husky/_": true,
 		"**/.vscode": true,
 		"**/dist": true,
+		"**/docs": true,
 		"**/public": true,
 		"**/node_modules": true,
 		"**/yarn.lock": true
