--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"formik": "^2.4.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.24.1",
 		"rxjs": "^7.8.1",
-		"uuid": "^10.0.0"
+		"uuid": "^10.0.0",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@testing-library/react": "^15.0.2",
